<resources>
    <string name="app_name">clientApp</string>
    <string name="playout">PlayOut</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginGoogle">Login with Google account</string>
    <string name="loginFb">Login with Facebook account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="title_activity_dashboard">dashboard_activity</string>
    <string name="tab_text_1">My events</string>
    <string name="tab_text_2">Search</string>
    <string name="tab_text_3">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="create_new_event">Create new event</string>
    <string name="_22_11_46">22:11:46</string>
    <string name="_2021_11_25">2021-11-25</string>
    <string name="vacancies">vacancies</string>
    <string name="note">note</string>
    <string name="join">Join</string>
    <string name="Events">Events</string>
    <string name="Levels">Levels</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_details">details</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="empty">" "</string>
    <string name="backarrow">backArrow</string>
    <string name="logut">logout</string>
    <string name="logout">logout</string>
    <string name="back">back</string>
    <string name="commentMenu">Comment</string>
    <string name="resignMenu">Resign</string>
    <string name="participantsMenu">Participants</string>
    <string name="close">Close</string>
    <string name="refresh">Refresh</string>
</resources>